[package]
name = "breakout"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"

[features]
inspector = ["dep:bevy-inspector-egui", "iyes_loopless/bevy-inspector-egui"]

[dependencies]
bevy = { version="0.9", features=["wayland"] }
bevy-inspector-egui = { version = "0.17.0", optional = true }
iyes_loopless = { version = "0.9.1" }
