[package]
name = "breakout"
version = "0.1.0"
authors = ["Simon Voordouw <simonvoordouw@gmail.com>"]
edition = "2021"

[features]
inspector = ["dep:bevy-inspector-egui"]

[profile.small-release]
inherits = "release"
lto = "fat"
opt-level = 'z'

[dependencies]
bevy-inspector-egui = { version = "0.17.0", optional = true }

[dependencies.bevy]
version = "0.10"
default-features = false
features = [
	"bevy_asset",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_sprite",
	"bevy_ui",
	"bevy_text",
	"bevy_render",
	"filesystem_watcher",
]

[target.'cfg(unix)'.dependencies.bevy]
version = "0.10"
features = [
	"x11",
	"wayland",
]
